--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.3.1",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "jest-expo": "~20.0.0",
+    "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -13,7 +19,9 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "jest": {
     "preset": "jest-expo"
@@ -22,8 +30,6 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-countdown-clock": "^2.0.0",
-    "react-native": "^0.47.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0"
+    "react-native": "^0.47.0"
   }
 }
