--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "expo": "^20.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
     "react-countdown-clock": "^2.0.0",
     "react-native": "^0.47.0"
