--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
     "react-countdown-clock": "^2.0.0",
-    "react-native": "^0.47.0"
+    "react-native": "^0.47.0",
+    "react-native-elements": "^0.17.0",
+    "react-navigation": "^1.0.0-beta.13"
   }
 }
